<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/graphConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GraphsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/graph_symbol"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="6dp"
                android:paddingVertical="6dp"
                android:text="@string/graphs_symbol"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/week_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="6dp"
                android:paddingVertical="6dp"
                android:text="@string/week_label" />

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/week_chart"
                android:layout_width="match_parent"
                android:layout_height="400dp" >

            </com.github.mikephil.charting.charts.LineChart>

            <TextView
                android:id="@+id/month_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="4dp"
                android:paddingVertical="4dp"
                android:text="@string/month_label" />

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/month_chart"
                android:layout_width="match_parent"
                android:layout_height="400dp" />

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>